syntax = "proto3";
package gnoland.vm;

import "gnoland/vm/types.proto";

// vm.m_addpkg
message MsgAddPackage {
	string creator = 1;
	MemPackage package = 2;
	string deposit = 3;
}

// vm.m_call
message MsgCall {
	string caller = 1;
	string send = 2;
	string pkg_path = 3;
	string func = 4;
	repeated string args = 5;
}
